--- a/index.html
+++ b/index.html
@@ -1,32 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>5 Day Weather Forecast</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
+
 <body>
-    <header>
-        <h1>Weather Dashboard</h1>
-    </header>
+    <header><h1>Weather Dashboard</h1></header>
 
-    <aside>
-        <form action="search">
-            <h3>Search a city's weather:</h3>
-            <input type="text" id="search-city" name="search-city"/>
-            <button class="btn" type="submit"><i class="fas fa-search"></i></button>
-            <ul class="priorSearches">
+    <div class="row">
+        <div class="col-3 searchSection">
+            <h2 class="search-header">Search A City's Weather</h2>
+            <input type="text" name="searchCity" class="searchBox" placeholder="Enter city name" />
+            <button class="searchBtn searchBtnProp" type="submit">
+                <i class="fas fa-search-location"></i>
+            </button>
 
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item priorSearches"></li>
             </ul>
-        </form>
-    </aside>
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item priorSearches"></li>
+            </ul>
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item priorSearches"></li>
+            </ul>
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item priorSearches"></li>
+            </ul>
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item priorSearches"></li>
+            </ul>
+        </div>
 
+        <div class="col-9">
+            <div class="cityInfo">
+                <h2 class="cityHeader"><span>City</span></h2>
+                <ul class="cityList">
+                    <li class="list-group-item temperature" style="background: rgba(0, 0, 0, 0)">
+                        <p>Temp:</p>
+                    </li>
+                    <li class="list-group-item humidity" style="background: rgba(0, 0, 0, 0)">
+                        <p>Humidity:</p>
+                    </li>
+                    <li class="list-group-item windSpeed" style="background: rgba(0, 0, 0, 0)">
+                        <p>Wind Speed:</p>
+                    </li>
+                    <li class="list-group-item uvIndex" style="background: rgba(0, 0, 0, 0)">
+                        <p>UV Index:</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-    
+        <h3 class="fiveDayForecast">5 Day Forecast:</h3>
+        <div class="row row-cols-4 row-cols-md-5 g-4">
+            <div class="col w-30">
+                <div class="card h-60 w-50 blue-cast">
+                    <div class="card-body card-color-w forecast"> 
+                        <h5 class="cardTitle">03/26/2021</h5>
+                        <p class="card-temp">Temp:</p>
+                        <p class="card-humid">Humidity:</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col w-30">
+                <div class="card h-60 w-50 blue-cast">
+                    <div class="card-body card-color-w  forecast">
+                        <h5 class="cardTitle">03/26/2021</h5>
+                        <p class="card-temp">Temp:</p>
+                        <p class="card-humid">Humidity:</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col w-30">
+                <div class="card h-60 w-50 blue-cast">
+                    <div class="card-body card-color-w forecast">
+                        <h5 class="cardTitle">03/26/2021</h5>
+                        <p class="card-temp">Temp:</p>
+                        <p class="card-humid">Humidity:</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col w-30">
+                <div class="card h-60 w-50 blue-cast">
+                    <div class="card-body card-color-w forecast">
+                        <h5 class="cardTitle">03/26/2021</h5>
+                        <p class="card-temp">Temp:</p>
+                        <p class="card-humid">Humidity:</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col w-30">
+                <div class="card h-60 w-50 blue-cast">
+                    <div class="card-body card-color-w forecast">
+                        <h5 class="cardTitle">03/26/2021</h5>
+                        <p class="card-temp">Temp:</p>
+                        <p class="card-humid">Humidity:</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
